FB-18 | Service | Implement repository test for update uom category and feature rest api adapter